--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,15 +4,18 @@
   "description": "frontend webview for real-time-chat app",
   "main": "tailwind.config.js",
   "scripts": {
-    "build": "webpack"
+    "dev" : "webpack --config ./config/webpack.dev.js",
+    "build": "webpack --config ./config/webpack.prod.js"
   },
   "author": "zidan-p",
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6"
