--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.6"
+    "@popperjs/core": "^2.11.6",
+    "tippy.js": "^6.3.7"
   }
 }
