--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "zidan-p",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
